--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/Lonewalker72/301---Project#readme",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "cannabis-reports": "^1.1.9",
     "express": "^4.15.3",
     "express-request-proxy": "^2.0.0",
     "pg": "^7.0.2"
